--- a/client/UI/client_test2.ui
+++ b/client/UI/client_test2.ui
@@ -44,9 +44,9 @@
     <property name="geometry">
      <rect>
       <x>0</x>
-      <y>-340</y>
-      <width>1172</width>
-      <height>1214</height>
+      <y>0</y>
+      <width>1189</width>
+      <height>874</height>
      </rect>
     </property>
     <layout class="QVBoxLayout" name="verticalLayout_18">
@@ -61,6 +61,11 @@
            </property>
            <item>
             <widget class="QPlainTextEdit" name="plainTextEdit_question">
+             <property name="font">
+              <font>
+               <pointsize>16</pointsize>
+              </font>
+             </property>
              <property name="plainText">
               <string>пывпвп
 ывпав</string>
@@ -68,22 +73,6 @@
             </widget>
            </item>
           </layout>
-         </item>
-         <item alignment="Qt::AlignHCenter">
-          <widget class="QLabel" name="label_img_question">
-           <property name="minimumSize">
-            <size>
-             <width>404</width>
-             <height>286</height>
-            </size>
-           </property>
-           <property name="frameShape">
-            <enum>QFrame::Box</enum>
-           </property>
-           <property name="text">
-            <string/>
-           </property>
-          </widget>
          </item>
         </layout>
        </item>
@@ -108,48 +97,27 @@
        <item>
         <layout class="QHBoxLayout" name="horizontalLayout">
          <item>
-          <widget class="QTextBrowser" name="textBrowser_2"/>
+          <widget class="QTextBrowser" name="textBrowser_2">
+           <property name="font">
+            <font>
+             <pointsize>16</pointsize>
+            </font>
+           </property>
+          </widget>
          </item>
          <item>
-          <widget class="QTextBrowser" name="textBrowser"/>
+          <widget class="QTextBrowser" name="textBrowser">
+           <property name="font">
+            <font>
+             <pointsize>16</pointsize>
+            </font>
+           </property>
+          </widget>
          </item>
         </layout>
        </item>
        <item>
-        <layout class="QHBoxLayout" name="horizontalLayout_7">
-         <item>
-          <widget class="QLabel" name="label_img_var1">
-           <property name="minimumSize">
-            <size>
-             <width>404</width>
-             <height>286</height>
-            </size>
-           </property>
-           <property name="frameShape">
-            <enum>QFrame::Box</enum>
-           </property>
-           <property name="text">
-            <string>Место для изображения</string>
-           </property>
-          </widget>
-         </item>
-         <item>
-          <widget class="QLabel" name="label_img_var3">
-           <property name="minimumSize">
-            <size>
-             <width>404</width>
-             <height>286</height>
-            </size>
-           </property>
-           <property name="frameShape">
-            <enum>QFrame::Box</enum>
-           </property>
-           <property name="text">
-            <string>Место для изображения</string>
-           </property>
-          </widget>
-         </item>
-        </layout>
+        <layout class="QHBoxLayout" name="horizontalLayout_7"/>
        </item>
        <item>
         <layout class="QHBoxLayout" name="horizontalLayout_8">
@@ -172,48 +140,27 @@
        <item>
         <layout class="QHBoxLayout" name="horizontalLayout_2">
          <item>
-          <widget class="QTextBrowser" name="textBrowser_4"/>
+          <widget class="QTextBrowser" name="textBrowser_4">
+           <property name="font">
+            <font>
+             <pointsize>16</pointsize>
+            </font>
+           </property>
+          </widget>
          </item>
          <item>
-          <widget class="QTextBrowser" name="textBrowser_3"/>
+          <widget class="QTextBrowser" name="textBrowser_3">
+           <property name="font">
+            <font>
+             <pointsize>16</pointsize>
+            </font>
+           </property>
+          </widget>
          </item>
         </layout>
        </item>
        <item>
-        <layout class="QHBoxLayout" name="horizontalLayout_9">
-         <item>
-          <widget class="QLabel" name="label_img_var2">
-           <property name="minimumSize">
-            <size>
-             <width>404</width>
-             <height>286</height>
-            </size>
-           </property>
-           <property name="frameShape">
-            <enum>QFrame::Box</enum>
-           </property>
-           <property name="text">
-            <string>Место для изображения</string>
-           </property>
-          </widget>
-         </item>
-         <item>
-          <widget class="QLabel" name="label_img_var4">
-           <property name="minimumSize">
-            <size>
-             <width>404</width>
-             <height>286</height>
-            </size>
-           </property>
-           <property name="frameShape">
-            <enum>QFrame::Box</enum>
-           </property>
-           <property name="text">
-            <string>Место для изображения</string>
-           </property>
-          </widget>
-         </item>
-        </layout>
+        <layout class="QHBoxLayout" name="horizontalLayout_9"/>
        </item>
        <item>
         <layout class="QHBoxLayout" name="horizontalLayout_10">
