--- a/client/UI/client_main.ui
+++ b/client/UI/client_main.ui
@@ -19,11 +19,11 @@
      <x>40</x>
      <y>20</y>
      <width>161</width>
-     <height>23</height>
+     <height>51</height>
     </rect>
    </property>
    <property name="text">
-    <string>Тест №1</string>
+    <string>Начать тестирование</string>
    </property>
   </widget>
   <widget class="QPushButton" name="pushButton_test2">
