--- a/server/UI/main_server.ui
+++ b/server/UI/main_server.ui
@@ -13,41 +13,50 @@
   <property name="windowTitle">
    <string>Server</string>
   </property>
-  <widget class="QTableWidget" name="tableWidget_server">
+  <widget class="QWidget" name="verticalLayoutWidget_3">
    <property name="geometry">
     <rect>
-     <x>10</x>
-     <y>40</y>
-     <width>441</width>
-     <height>301</height>
+     <x>0</x>
+     <y>0</y>
+     <width>461</width>
+     <height>341</height>
     </rect>
    </property>
-  </widget>
-  <widget class="QPushButton" name="pushButton_delete_all">
-   <property name="geometry">
-    <rect>
-     <x>314</x>
-     <y>10</y>
-     <width>131</width>
-     <height>23</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Удалить результаты</string>
-   </property>
-  </widget>
-  <widget class="QPushButton" name="pushButton_work_db">
-   <property name="geometry">
-    <rect>
-     <x>20</x>
-     <y>10</y>
-     <width>131</width>
-     <height>23</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Работа с вопросами</string>
-   </property>
+   <layout class="QVBoxLayout" name="verticalLayout_3">
+    <item>
+     <layout class="QHBoxLayout" name="horizontalLayout">
+      <item>
+       <layout class="QVBoxLayout" name="verticalLayout">
+        <item>
+         <widget class="QPushButton" name="pushButton_work_db">
+          <property name="text">
+           <string>Работа с вопросами</string>
+          </property>
+         </widget>
+        </item>
+       </layout>
+      </item>
+      <item>
+       <layout class="QVBoxLayout" name="verticalLayout_2">
+        <item>
+         <widget class="QPushButton" name="pushButton_delete_all">
+          <property name="text">
+           <string>Удалить результаты</string>
+          </property>
+         </widget>
+        </item>
+       </layout>
+      </item>
+     </layout>
+    </item>
+    <item>
+     <layout class="QHBoxLayout" name="horizontalLayout_2">
+      <item>
+       <widget class="QTableWidget" name="tableWidget_server"/>
+      </item>
+     </layout>
+    </item>
+   </layout>
   </widget>
  </widget>
  <resources/>
