fix client tasks

--- a/server/UI/main_server.ui
+++ b/server/UI/main_server.ui
@@ -51,6 +51,9 @@
     </item>
     <item>
      <layout class="QHBoxLayout" name="horizontalLayout_2">
+      <property name="sizeConstraint">
+       <enum>QLayout::SetNoConstraint</enum>
+      </property>
       <item>
        <widget class="QTableWidget" name="tableWidget_server"/>
       </item>
